<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8sp"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:gravity="center"
                android:text="@string/app_name_ru"
                android:textColor="@color/dark_green"
                android:textSize="12pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:textColorHint="@color/green_200"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false" />

            <EditText
                android:id="@+id/password"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/green_200"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="140pt"
                android:layout_height="30pt"
                android:layout_marginTop="10pt"
                android:text="@string/login_button"
                android:backgroundTint="@color/dark_green"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/logError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4pt"
                android:text="@string/login_error"
                android:textColor="@color/error"
                android:textSize="10pt"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>